--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "react-window": "^1.8.11",
     "recharts": "^3.1.2",
-    "swiper": "^11.2.10"
+    "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.10",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
